<resources>
    <string name="app_name">USC Films</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="home_main_title">USC Films</string>
    <string name="app_icon">App Icon</string>
    <string name="movie_tab_title">Movies</string>
    <string name="tv_tab_title">TV Shows</string>
    <string name="top_rated_title">Top-Rated</string>
    <string name="recommended_title">Recommended Picks</string>
    <string name="popular_title">Popular</string>
    <string name="footer_top">Powered by TMDB</string>
    <string name="footer_bottom">Developed by Raveena Kshatriya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="facebook_app_id">168671288483049</string>
    <string name="no_search_results">No result found.</string>
    <string name="no_watchlist_items">Nothing saved to Watchlist</string>
    <string name="loading">Loading...</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>