<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.uscfilms.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
            <action android:id="@+id/action_home_to_details"
                app:destination="@id/navigation_details"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.uscfilms.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.example.uscfilms.ui.watchlist.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <activity
        android:id="@+id/navigation_details"
        android:name="com.example.uscfilms.DetailsActivity"
        android:label="Details"
        tools:layout="@layout/activity_details"
        >
    </activity>

</navigation>
