<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeTabFragment"
    android:fillViewport="true"
    android:scrollbars="none"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:layout_marginTop="300dp"
        android:layout_gravity="center"
        android:id="@+id/progress_bar"
        android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:id="@+id/loading_text_view"
            android:layout_gravity="center"/>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="60dp"
    android:visibility="gone"
    android:id="@+id/tab_linear_layout"
    >


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_centerInParent="false"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorEnabled="true"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="0dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="1dp"
        app:sliderIndicatorSelectedColor="@color/blue"
        app:sliderIndicatorUnselectedColor="@color/white"
        app:sliderScrollTimeInSec="1" >

    </com.smarteist.autoimageslider.SliderView>

</FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_rated_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/topRatedLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRated"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/popularLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/footer_top"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:id="@+id/powered_by"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/footer_bottom"
        android:textColor="@color/blue"
        android:textSize="17sp" />

</LinearLayout>
    </LinearLayout>
    </ScrollView>




